objects/Activity_Template_Line__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Template__c</fullName>
        <label>Activity Template</label>
        <referenceTo>Activity_Template__c</referenceTo>
        <relationshipLabel>Activity Template Lines</relationshipLabel>
        <relationshipName>Activity_Template_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activity_Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Days__c</fullName>
        <label># of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity Template Line</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Activity Template Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Template Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>